--- a/receta-empanadas.html
+++ b/receta-empanadas.html
@@ -50,7 +50,8 @@
 
       <p style="margin:10px 0 12px;"><b>Precio:</b> (poné tu precio acá)</p>
 
-      <button class="btn" id="buyBtn">Pagar con Mercado Pago y descargar</button>
+      
+      <button class="btnPagar" type="button">Pagar para descargar receta</button>
 
       <script>
         document.getElementById("buyBtn").addEventListener("click", async () => {
