--- a/gracias/index.html
+++ b/gracias/index.html
@@ -5,26 +5,232 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Pago - La Cocina de Santa</title>
   <style>
-    body{font-family:system-ui,Arial,sans-serif;margin:0;padding:24px;background:#0b0b0b;color:#fff}
-    .card{max-width:720px;margin:0 auto;background:#151515;border:1px solid #2a2a2a;border-radius:14px;padding:18px}
-    h1{margin:0 0 10px;font-size:22px}
-    p{margin:8px 0;line-height:1.4;color:#d7d7d7}
-    .row{display:flex;gap:10px;flex-wrap:wrap;margin-top:14px}
-    a.btn, button.btn{display:inline-block;padding:10px 14px;border-radius:10px;border:1px solid #3a3a3a;background:#222;color:#fff;text-decoration:none;cursor:pointer}
-    .ok{color:#7CFF8A}
-    .bad{color:#FF7C7C}
-    code{background:#222;padding:2px 6px;border-radius:6px}
+    :root{
+      --bg1:#fff7ed;      /* crema */
+      --bg2:#ffe4c7;      /* durazno suave */
+      --card:#ffffffcc;   /* vidrio */
+      --text:#1f2937;     /* gris oscuro */
+      --muted:#6b7280;    /* gris */
+      --accent:#f97316;   /* naranja */
+      --accent2:#f59e0b;  /* dorado */
+      --ok:#16a34a;
+      --bad:#dc2626;
+      --border:#e5e7eb;
+      --shadow: 0 16px 50px rgba(17,24,39,.12);
+      --radius: 18px;
+    }
+
+    *{box-sizing:border-box}
+    body{
+      margin:0;
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Noto Sans", "Helvetica Neue", sans-serif;
+      color:var(--text);
+      background:
+        radial-gradient(1200px 700px at 20% 10%, var(--bg2), transparent 60%),
+        radial-gradient(900px 600px at 90% 20%, #fff0d6, transparent 55%),
+        linear-gradient(180deg, var(--bg1), #ffffff);
+      min-height:100vh;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding:24px;
+    }
+
+    .wrap{
+      width:min(860px, 100%);
+      display:grid;
+      gap:16px;
+    }
+
+    .brand{
+      display:flex;
+      align-items:center;
+      gap:12px;
+      padding:10px 12px;
+    }
+
+    .logo{
+      width:44px;height:44px;border-radius:14px;
+      background: linear-gradient(135deg, var(--accent), var(--accent2));
+      box-shadow: 0 10px 26px rgba(249,115,22,.25);
+      display:grid;place-items:center;
+      color:white;font-size:22px;
+    }
+    .brand h1{
+      font-size:18px;margin:0;line-height:1.2
+    }
+    .brand p{
+      margin:2px 0 0;
+      color:var(--muted);
+      font-size:13px;
+    }
+
+    .card{
+      background:var(--card);
+      border:1px solid rgba(229,231,235,.9);
+      backdrop-filter: blur(8px);
+      border-radius:var(--radius);
+      box-shadow: var(--shadow);
+      padding:18px;
+      overflow:hidden;
+    }
+
+    .hero{
+      display:flex;
+      gap:14px;
+      align-items:flex-start;
+      padding:6px 2px 14px;
+      border-bottom:1px solid rgba(229,231,235,.8);
+    }
+
+    .badge{
+      width:44px;height:44px;border-radius:16px;
+      background:#fff;
+      border:1px solid var(--border);
+      display:grid;place-items:center;
+      font-size:20px;
+    }
+
+    .hero h2{margin:0;font-size:20px}
+    .hero .sub{margin:6px 0 0;color:var(--muted);font-size:14px;line-height:1.35}
+
+    .row{
+      display:flex;
+      flex-wrap:wrap;
+      gap:10px;
+      align-items:center;
+      justify-content:space-between;
+      margin-top:14px;
+    }
+
+    .pill{
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      padding:8px 10px;
+      border-radius:999px;
+      border:1px dashed rgba(249,115,22,.35);
+      background: rgba(249,115,22,.08);
+      color:#7c2d12;
+      font-size:13px;
+      max-width:100%;
+      overflow:hidden;
+      text-overflow:ellipsis;
+      white-space:nowrap;
+    }
+    .pill code{
+      background:transparent;
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+      font-size:12px;
+      color:#7c2d12;
+    }
+
+    .status{
+      font-size:15px;
+      margin:10px 2px 0;
+      color:var(--muted);
+    }
+
+    .bar{
+      margin-top:10px;
+      height:10px;
+      border-radius:999px;
+      background:#f3f4f6;
+      border:1px solid rgba(229,231,235,.8);
+      overflow:hidden;
+    }
+    .bar > div{
+      height:100%;
+      width:30%;
+      border-radius:999px;
+      background: linear-gradient(90deg, var(--accent), var(--accent2));
+      animation: move 1.2s ease-in-out infinite;
+    }
+    @keyframes move{
+      0%{transform: translateX(-40%); width:35%}
+      50%{transform: translateX(70%); width:45%}
+      100%{transform: translateX(-40%); width:35%}
+    }
+
+    .actions{
+      display:none;
+      gap:10px;
+      flex-wrap:wrap;
+      margin-top:14px;
+    }
+
+    a.btn{
+      display:inline-flex;
+      align-items:center;
+      gap:10px;
+      padding:11px 14px;
+      border-radius:14px;
+      text-decoration:none;
+      border:1px solid rgba(229,231,235,.9);
+      background:#fff;
+      color:var(--text);
+      box-shadow: 0 8px 20px rgba(17,24,39,.06);
+    }
+    a.btn:hover{transform: translateY(-1px)}
+    a.btn:active{transform: translateY(0px)}
+
+    a.btn.primary{
+      border:none;
+      background: linear-gradient(135deg, var(--accent), var(--accent2));
+      color:white;
+      box-shadow: 0 14px 30px rgba(249,115,22,.22);
+    }
+
+    .note{
+      margin-top:10px;
+      font-size:13px;
+      color:var(--muted);
+      line-height:1.35;
+    }
+
+    .ok{color:var(--ok); font-weight:600}
+    .bad{color:var(--bad); font-weight:600}
   </style>
 </head>
-<body>
-  <div class="card">
-    <h1>Procesando tu pago…</h1>
-    <p id="estado">Buscando estado del pago.</p>
-    <p id="detalle"></p>
 
-    <div class="row" id="acciones" style="display:none">
-      <a class="btn" href="/" >Volver al inicio</a>
-      <a class="btn" id="btnDescargar" href="#">Descargar archivo</a>
+<body>
+  <div class="wrap">
+    <div class="brand">
+      <div class="logo">🍽️</div>
+      <div>
+        <h1>La Cocina de Santa</h1>
+        <p>Pago y descarga segura</p>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="hero">
+        <div class="badge">🧾</div>
+        <div>
+          <h2>Procesando tu pago</h2>
+          <p class="sub">
+            En cuanto Mercado Pago confirme, te habilitamos la descarga automáticamente.
+          </p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="pill" id="pillOrden" style="display:none">
+          Orden: <code id="orderText"></code>
+        </div>
+      </div>
+
+      <div class="status" id="estado">Verificando…</div>
+      <div class="bar" id="barra"><div></div></div>
+
+      <div class="actions" id="acciones">
+        <a class="btn" href="/">← Volver al inicio</a>
+        <a class="btn primary" id="btnDescargar" href="#">⬇️ Descargar receta</a>
+      </div>
+
+      <div class="note" id="nota">
+        Si tu pago tarda un poco, dejá esta pantalla abierta unos segundos.
+      </div>
     </div>
   </div>
 
@@ -33,15 +239,20 @@
     const order_id = params.get("order_id");
 
     const estadoEl = document.getElementById("estado");
-    const detalleEl = document.getElementById("detalle");
+    const barraEl = document.getElementById("barra");
     const accionesEl = document.getElementById("acciones");
     const btnDescargar = document.getElementById("btnDescargar");
+    const pillOrden = document.getElementById("pillOrden");
+    const orderText = document.getElementById("orderText");
+    const nota = document.getElementById("nota");
 
     if (!order_id) {
-      estadoEl.innerHTML = '<span class="bad">Falta order_id en la URL.</span>';
-      detalleEl.textContent = "Volvé a pagar desde la página principal.";
+      estadoEl.innerHTML = '<span class="bad">Falta el identificador de orden.</span>';
+      barraEl.style.display = "none";
+      nota.textContent = "Volvé al inicio y tocá “Pagar para descargar receta”.";
     } else {
-      detalleEl.innerHTML = 'Orden: <code>' + order_id + '</code>';
+      pillOrden.style.display = "inline-flex";
+      orderText.textContent = order_id;
 
       async function check() {
         const r = await fetch(`/api/status?order_id=${encodeURIComponent(order_id)}`);
@@ -49,15 +260,19 @@
 
         if (data.status === "approved") {
           estadoEl.innerHTML = '<span class="ok">Pago aprobado ✅</span> Ya podés descargar.';
-          btnDescargar.href = `/download?order_id=${encodeURIComponent(order_id)}`;
+          barraEl.style.display = "none";
           accionesEl.style.display = "flex";
+          btnDescargar.href = `/download?order_id=${encodeURIComponent(order_id)}`;
+          nota.textContent = "Gracias ❤️ Si querés, podés volver al inicio cuando termines.";
           return;
         }
 
         if (data.status === "rejected") {
-          estadoEl.innerHTML = '<span class="bad">Pago rechazado ❌</span>';
+          estadoEl.innerHTML = '<span class="bad">Pago rechazado ❌</span> No se pudo habilitar la descarga.';
+          barraEl.style.display = "none";
           accionesEl.style.display = "flex";
           btnDescargar.style.display = "none";
+          nota.textContent = "Podés intentarlo de nuevo desde el inicio.";
           return;
         }
 
