--- a/index.html
+++ b/index.html
@@ -10,27 +10,63 @@
     h1{margin:0;font-size:32px}
     p{margin:8px 0 0;color:#444}
     .wrap{max-width:920px;margin:0 auto;padding:22px 18px}
-    .card{background:#fff;border:1px solid #eee;border-radius:14px;padding:18px;box-shadow:0 8px 20px rgba(0,0,0,.04)}
+
     .grid{display:grid;gap:14px;grid-template-columns:repeat(auto-fit,minmax(240px,1fr))}
-    a.btn{display:inline-block;padding:12px 14px;border-radius:10px;background:#1f6f3d;color:#fff;text-decoration:none;font-weight:600}
+    .card{background:#fff;border:1px solid #eee;border-radius:14px;padding:18px;box-shadow:0 8px 20px rgba(0,0,0,.04)}
+
+    .btnPay{
+      width:100%;
+      padding:12px 14px;
+      border-radius:10px;
+      border:none;
+      background: linear-gradient(135deg,#f97316,#f59e0b);
+      color:#fff;
+      font-weight:700;
+      cursor:pointer;
+      margin-top:10px;
+    }
+
+    .howTop{
+      width:100%;
+      background: linear-gradient(90deg,#fff7ed,#ffedd5);
+      border-bottom:1px solid #f3d6b5;
+      padding:14px 18px;
+    }
+    .howTop .inner{max-width:920px;margin:0 auto}
+    .howTop h2{margin:0 0 6px;font-size:18px}
+    .howTop ol{margin:0;padding-left:18px;line-height:1.5;color:#3d3d3d}
+
     a.link{color:#1f6f3d;text-decoration:none;font-weight:600}
     footer{padding:22px 18px;text-align:center;color:#666}
   </style>
 </head>
+
 <body>
   <header>
     <h1>La Cocina de Santa</h1>
     <p>Recetas caseras con sabor dominicano 🇩🇴</p>
   </header>
 
+  <!-- Como funciona ARRIBA de todo, ancho completo -->
+  <section class="howTop">
+    <div class="inner">
+      <h2>¿Cómo funciona?</h2>
+      <ol>
+        <li>Tocás <b>Pagar para descargar receta</b>.</li>
+        <li>Pagás en Mercado Pago.</li>
+        <li>Volvés y se habilita la <b>descarga</b> automáticamente.</li>
+      </ol>
+    </div>
+  </section>
+
   <main class="wrap">
     <section class="grid">
       <div class="card">
         <h2>Receta destacada</h2>
 
-        <img 
-          src="img/empanadas.jpg" 
-          alt="Empanadas caseras de La Cocina de Santa"
+        <img
+          src="img/arepa.jpg"
+          alt="Arepa Dominicana - La Cocina de Santa"
           style="
             width:100%;
             border-radius:14px;
@@ -39,21 +75,21 @@
           "
         >
 
-        <p style="font-weight:600;margin-top:6px;">
-          Empanadas caseras
+        <p style="font-weight:700;margin-top:6px;">
+          Arepa Dominicana
         </p>
 
-        <p style="color:#555;">
-          Crujientes por fuera, suaves por dentro y con sabor dominicano 🇩🇴
+        <p style="color:#555;margin:0;">
+          Crujiente por fuera, suave por dentro. Ideal para desayuno o merienda.
         </p>
 
-        <button id="btnPagar">Pagar para descargar receta</button>
+        <button id="btnPagar" class="btnPay" type="button">Pagar para descargar receta</button>
       </div>
 
       <div class="card">
-        <h2>¿Cómo funciona?</h2>
-        <p>Ves una vista previa gratis. Si te gusta, pagás por Mercado Pago y descargás la receta completa.</p>
-        <a class="link" href="receta-empanadas.html">Probar con una receta →</a>
+        <h2>Vista previa</h2>
+        <p>Podés ver una vista previa gratis. Si te gusta, pagás y descargás la receta completa.</p>
+        <a class="link" href="receta-empanadas.html">Ver una página de prueba →</a>
       </div>
     </section>
   </main>
@@ -64,37 +100,26 @@
 
   <script>
     document.getElementById("y").textContent = new Date().getFullYear();
-  </script>
-  <script>
-document.getElementById("btnPagar").addEventListener("click", async () => {
-  try {
-    const r = await fetch("/api/create-preference", {
-      method: "POST",
-      headers: {"Content-Type":"application/json"},
-      body: JSON.stringify({ title: "Empanada casera", price: 10 })
+
+    document.getElementById("btnPagar").addEventListener("click", async () => {
+      const r = await fetch("/api/create-preference", {
+        method: "POST",
+        headers: {"Content-Type":"application/json"},
+        body: JSON.stringify({ title: "Arepa Dominicana", price: 10 })
+      });
+
+      const data = await r.json().catch(() => ({}));
+      if (!data.init_point) {
+        alert("No se pudo iniciar el pago. Intenta de nuevo.");
+        return;
+      }
+
+      window.location.href = data.init_point;
     });
-
-    const text = await r.text();         // <-- vemos lo que realmente responde
-    console.log("create-preference status:", r.status);
-    console.log("create-preference response:", text);
-
-    let data = {};
-    try { data = JSON.parse(text); } catch {}
-
-    if (!r.ok || !data.init_point) {
-      alert("No se pudo iniciar el pago. Abrí F12 > Console y mirá el log.");
-      return;
-    }
-
-    window.location.href = data.init_point;
-  } catch (e) {
-    console.error("Error al iniciar pago:", e);
-    alert("Error de red o script. Mirá F12 > Console.");
-  }
-});
-</script>
+  </script>
 </body>
 </html>
+
 
 
 
