--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
     <div class="inner">
       <h2>¿Cómo funciona?</h2>
       <ol>
+        <li>Tocás <b>Elegis la receta que te gusta</b>.</li>
         <li>Tocás <b>Pagar para descargar receta</b>.</li>
         <li>Pagás en Mercado Pago.</li>
         <li>Volvés y se habilita la <b>descarga</b> automáticamente.</li>
+        
       </ol>
     </div>
   </section>
@@ -86,11 +88,7 @@
         <button id="btnPagar" class="btnPay" type="button">Pagar para descargar receta</button>
       </div>
 
-      <div class="card">
-        <h2>Vista previa</h2>
-        <p>Podés ver una vista previa gratis. Si te gusta, pagás y descargás la receta completa.</p>
-        <a class="link" href="receta-empanadas.html">Ver una página de prueba →</a>
-      </div>
+      
     </section>
   </main>
 
@@ -119,6 +117,7 @@
   </script>
 </body>
 </html>
+
 
 
 
