Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="inner">
       <h2>¿Cómo funciona?</h2>
       <ol>
-        <li>Tocás <b>Elegis la receta que te gusta</b>.</li>
+        <li>Elegis la receta que te gusta</b>.</li>
         <li>Tocás <b>Pagar para descargar receta</b>.</li>
         <li>Pagás en Mercado Pago.</li>
         <li>Volvés y se habilita la <b>descarga</b> automáticamente.</li>
@@ -117,6 +117,7 @@
   </script>
 </body>
 </html>
+
 
 
 
