Replace image of Arepa with Empanadas

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+m<!doctype html>
 <html lang="es">
 <head>
   <meta charset="utf-8" />
@@ -59,7 +59,7 @@
         <h2>Receta destacada</h2>
 
         <img
-          src="img/arepa.jpg"
+          src="img/empanadas.jpg"
           alt="Arepa Dominicana - La Cocina de Santa"
           style="
             width:100%;
@@ -105,6 +105,7 @@
   </script>
 </body>
 </html>
+
 
 
 
